dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

dnl ---------------
dnl MMedia specific
dnl ---------------

dnl Check for ESD

ESD_LINK=
AC_CHECK_HEADER(esd.h, [
  AC_CHECK_LIB(esd, esd_close, [
    ESD_LINK="-lesd"
  ])
])

if test "$ESD_LINK" != "" ; then
  echo "ESound detected"
fi

dnl -----------
dnl Final subst

PATH_IFS=$wx_cv_path_ifs
WX_TARGET_LIBRARY=$wx_cv_target_library
WX_TARGET_LIBRARY_TYPE=$wx_cv_target_libtype

AC_SUBST(PATH_IFS)
AC_SUBST(ESD_LINK)
AC_SUBST(WX_TARGET_LIBRARY)
AC_SUBST(WX_TARGET_LIBRARY_TYPE)

dnl -----------
dnl File output


AC_OUTPUT([
            Makefile
            src/Makefile
            src/ogl/Makefile
            src/mmedia/Makefile
            src/stc/Makefile
            samples/Makefile
            samples/mmedia/Makefile
            samples/stc/Makefile
         ])
