dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

dnl we need the values the main configure determined for us, so refuse
dnl to run if we don't have them
if test "x$wx_cv_path_ifs" = "x"; then
    AC_MSG_ERROR([Please run configure from the top level directory.])
fi

dnl ---------------
dnl MMedia specific
dnl ---------------

dnl Check for ESD

ESD_LINK=
AC_CHECK_HEADER(esd.h, [
  AC_CHECK_LIB(esd, esd_close, [
    ESD_LINK="-lesd"
  ])
])

if test "$ESD_LINK" != "" ; then
  echo "ESound detected"
fi

dnl -----------
dnl Final subst

PATH_IFS=$wx_cv_path_ifs
WX_TARGET_LIBRARY=$wx_cv_target_library
WX_TARGET_LIBRARY_TYPE=$wx_cv_target_libtype
WX_LIBRARY_BASENAME=$wx_cv_library_basename
WX_RELEASE=$wx_cv_release
WX_CURRENT=$wx_cv_current
WX_REVISION=$wx_cv_revision
WX_AGE=$wx_cv_age

AC_SUBST(PATH_IFS)
AC_SUBST(ESD_LINK)
AC_SUBST(WX_TARGET_LIBRARY)
AC_SUBST(WX_TARGET_LIBRARY_TYPE)
AC_SUBST(WX_LIBRARY_BASENAME)
AC_SUBST(WX_RELEASE)
AC_SUBST(WX_CURRENT)
AC_SUBST(WX_REVISION)
AC_SUBST(WX_AGE)

dnl -----------
dnl File output


AC_OUTPUT([
            src/Makefile
            src/deprecated/Makefile
            src/ogl/Makefile
            src/mmedia/Makefile
            src/stc/Makefile
            src/svg/Makefile	    
            src/xrc/Makefile
            src/gizmos/Makefile
            src/plot/Makefile
            src/applet/Makefile
            src/fl/Makefile
            src/net/Makefile
            samples/Makefile
            samples/deprecated/Makefile
            samples/deprecated/proplist/Makefile
            samples/deprecated/resource/Makefile
            samples/deprecated/treelay/Makefile
            samples/mmedia/Makefile
            samples/ogl/Makefile
            samples/ogl/ogledit/Makefile
            samples/ogl/studio/Makefile
            samples/stc/Makefile
            samples/svg/Makefile
            samples/gizmos/Makefile
            samples/gizmos/editlbox/Makefile
            samples/gizmos/dynsash/Makefile
            samples/gizmos/dynsash_switch/Makefile
            samples/gizmos/multicell/Makefile
            samples/gizmos/splittree/Makefile
            samples/gizmos/led/Makefile
            samples/xrc/Makefile
            samples/plot/Makefile
            samples/applet/Makefile
            samples/fl/Makefile
            samples/fl/fl_demo1/Makefile
            samples/fl/fl_demo2/Makefile
            samples/fl/fl_sample1/Makefile
            samples/fl/fl_sample2/Makefile
            samples/fl/fl_sample3/Makefile
            utils/Makefile
            utils/wxrc/Makefile
            utils/wxrcedit/Makefile
            utils/convertrc/Makefile
         ])
