dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

AC_OUTPUT([
            Makefile
            bombs/Makefile
            dbbrowse/Makefile
            forty/Makefile
            fractal/Makefile
            life/Makefile
            poem/Makefile
         ])
