dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

MOBILE_SUBDIRS=$wx_cv_path_mobilesubdirs
AC_SUBST(MOBILE_SUBDIRS)

IF_GNU_MAKE=$wx_cv_if_gnu_make
PATH_IFS=$wx_cv_path_ifs
PROGRAM_EXT=$wx_cv_program_ext
WX_TARGET_LIBRARY=$wx_cv_target_library
WX_TARGET_LIBRARY_GL=$wx_cv_target_library_gl

AC_SUBST(IF_GNU_MAKE)
AC_SUBST(PATH_IFS)
AC_SUBST(PROGRAM_EXT)
AC_SUBST(WX_TARGET_LIBRARY)
AC_SUBST(WX_TARGET_LIBRARY_GL)

AC_OUTPUT([
            Makefile
            wxedit/Makefile
        ])
