dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

SAMPLES_SUBDIRS=$wx_cv_path_samplesubdirs
AC_SUBST(SAMPLES_SUBDIRS)

PATH_IFS=$wx_cv_path_ifs
PROGRAM_EXT=$wx_cv_program_ext
WX_TARGET_LIBRARY=$wx_cv_target_library

AC_SUBST(PATH_IFS)
AC_SUBST(PROGRAM_EXT)
AC_SUBST(WX_TARGET_LIBRARY)

AC_OUTPUT([
            Makefile
            caret/Makefile
            calendar/Makefile
            checklst/Makefile
            config/Makefile
            controls/Makefile
            console/Makefile
            db/Makefile
            dialogs/Makefile
            dialup/Makefile
            docview/Makefile
            docvwmdi/Makefile
            dnd/Makefile
            dragimag/Makefile
            drawing/Makefile
            exec/Makefile
            font/Makefile
            grid/Makefile
            help/Makefile
            image/Makefile
            internat/Makefile
            ipc/Makefile
            joytest/Makefile
            layout/Makefile
            listctrl/Makefile
            mdi/Makefile
            menu/Makefile
            minifram/Makefile
            minimal/Makefile
            newgrid/Makefile
            notebook/Makefile
            plot/Makefile
            png/Makefile
            printing/Makefile
            proplist/Makefile
            propsize/Makefile
            richedit/Makefile
            resource/Makefile
            rotate/Makefile
            sashtest/Makefile
            scroll/Makefile
            scrollsub/Makefile
            splitter/Makefile
            statbar/Makefile
            text/Makefile
            thread/Makefile
            toolbar/Makefile
            treectrl/Makefile
            treelay/Makefile
            typetest/Makefile
            validate/Makefile
            sockets/Makefile
            wizard/Makefile
            html/Makefile
            html/about/Makefile
            html/help/Makefile
            html/printing/Makefile
            html/helpview/Makefile
            html/test/Makefile
            html/zip/Makefile
            html/virtual/Makefile
            html/widget/Makefile
            opengl/Makefile
            opengl/cube/Makefile
            opengl/penguin/Makefile
            opengl/isosurf/Makefile
        ])
