dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

dnl we need the values the main configure determined for us, so refuse
dnl to run if we don't have them
if test "x$wx_cv_path_samplesubdirs" = "x"; then
    AC_MSG_ERROR([Please run configure from the top level directory.])
fi

SAMPLES_SUBDIRS=$wx_cv_path_samplesubdirs
AC_SUBST(SAMPLES_SUBDIRS)

IF_GNU_MAKE=$wx_cv_if_gnu_make
PATH_IFS=$wx_cv_path_ifs
PROGRAM_EXT=$wx_cv_program_ext
WX_TARGET_LIBRARY=$wx_cv_target_library
WX_TARGET_LIBRARY_GL=$wx_cv_target_library_gl

AC_SUBST(IF_GNU_MAKE)
AC_SUBST(PATH_IFS)
AC_SUBST(PROGRAM_EXT)
AC_SUBST(WX_TARGET_LIBRARY)
AC_SUBST(WX_TARGET_LIBRARY_GL)

AC_OUTPUT([
            Makefile
            artprov/Makefile
            caret/Makefile
            calendar/Makefile
            checklst/Makefile
            config/Makefile
            controls/Makefile
            console/Makefile
            db/Makefile
            dialogs/Makefile
            dialup/Makefile
            docview/Makefile
            docvwmdi/Makefile
            dnd/Makefile
            dragimag/Makefile
            drawing/Makefile
            dynamic/Makefile
            erase/Makefile
            event/Makefile
            exec/Makefile
            font/Makefile
            grid/Makefile
            help/Makefile
            image/Makefile
            internat/Makefile
            ipc/Makefile
            joytest/Makefile
            keyboard/Makefile
            layout/Makefile
            listctrl/Makefile
            mdi/Makefile
            menu/Makefile
            memcheck/Makefile
            minifram/Makefile
            minimal/Makefile
            mobile/Makefile
            mobile/wxedit/Makefile
            mobile/styles/Makefile
            multimon/Makefile
            nativedlg/Makefile
            notebook/Makefile
            oleauto/Makefile
            ownerdrw/Makefile
            png/Makefile
            printing/Makefile
            propsize/Makefile
            regtest/Makefile
            rotate/Makefile
            sashtest/Makefile
            shaped/Makefile
            scroll/Makefile
            scrollsub/Makefile
            sockets/Makefile
            splitter/Makefile
            statbar/Makefile
            taskbar/Makefile
            text/Makefile
            thread/Makefile
            toolbar/Makefile
            treectrl/Makefile
            typetest/Makefile
            validate/Makefile
            widgets/Makefile
            wizard/Makefile
            html/Makefile
            html/about/Makefile
            html/help/Makefile
            html/printing/Makefile
            html/helpview/Makefile
            html/test/Makefile
            html/zip/Makefile
            html/virtual/Makefile
            html/widget/Makefile
            opengl/Makefile
            opengl/cube/Makefile
            opengl/penguin/Makefile
            opengl/isosurf/Makefile
        ])
