dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

GL_TOOLKIT_DIR=$wx_cv_path_glcanvas
AC_SUBST(GL_TOOLKIT_DIR)

AC_OUTPUT([
            Makefile
            wxMMedia2/Makefile
            wxMMedia2/lib/Makefile
            wxMMedia2/sample/Makefile
            glcanvas/Makefile
            glcanvas/${GL_TOOLKIT_DIR}/Makefile
            ogl/Makefile
            ogl/src/Makefile
            makegen/Makefile
            HelpGen/Makefile
            HelpGen/src/Makefile
            tex2rtf/Makefile
            tex2rtf/src/Makefile
            hhp2cached/Makefile
            dialoged/Makefile
            dialoged/src/Makefile
         ])
