dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id$)dnl

AC_INIT(Makefile.in)

dnl we need the values the main configure determined for us, so refuse
dnl to run if we don't have them
if test "x$wx_cv_use_gui" = "x"; then
    AC_MSG_ERROR([Please run configure from the top level directory.])
fi

GL_TOOLKIT_DIR=$wx_cv_path_glcanvas
USE_GUI=$wx_cv_use_gui
USE_RESOURCES=$wx_cv_use_resources
AC_SUBST(GL_TOOLKIT_DIR)
AC_SUBST(USE_GUI)
AC_SUBST(USE_RESOURCES)

AC_OUTPUT([
            Makefile
            makegen/Makefile
            HelpGen/Makefile
            HelpGen/src/Makefile
            tex2rtf/Makefile
            tex2rtf/src/Makefile
            hhp2cached/Makefile
            dialoged/Makefile
            dialoged/src/Makefile
            emulator/Makefile
            emulator/src/Makefile
            helpview/Makefile
            helpview/src/Makefile
            wxconfigtool/Makefile
            wxconfigtool/src/Makefile
         ])
