## Purpose: The automake makefile for wxWindows (include/wx subdir)
## Author:  Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

SUBDIRS = generic @TOOLKIT_DIR@ @INCLUDE_SUBDIRS@

wx_includedir = ${includedir}/wx
wx_include_HEADERS = \
\
 arrimpl.cpp \
 listimpl.cpp \
\
 accel.h \
 app.h \
 bitmap.h \
 bmpbuttn.h \
 brush.h \
 buffer.h \
 button.h \
 caret.h \
 checkbox.h \
 checklst.h \
 choicdlg.h \
 choice.h \
 clipbrd.h \
 cmndata.h \
 colordlg.h \
 colour.h \
 combobox.h \
 confbase.h \
 config.h \
 control.h \
 cursor.h \
 dataobj.h \
 date.h \
 datstrm.h \
 db.h \
 dbtable.h \
 dc.h \
 dcclient.h \
 dcmemory.h \
 dcprint.h \
 dcps.h \
 dcscreen.h \
 dde.h \
 debug.h \
 defs.h \
 dialog.h \
 dirdlg.h \
 dnd.h \
 docmdi.h \
 docview.h \
 dragimag.h \
 dynarray.h \
 dynlib.h \
 event.h \
 expr.h \
 file.h \
 fileconf.h \
 filedlg.h \
 filefn.h \
 font.h \
 fontdlg.h \
 frame.h \
 gauge.h \
 gdicmn.h \
 gdiobj.h \
 grid.h \
 hash.h \
 help.h \
 helpbase.h \
 helphtml.h \
 helpwin.h \
 helpxlp.h \
 icon.h \
 image.h \
 imaglist.h \
 intl.h \
 ioswrap.h \
 ipcbase.h \
 joystick.h \
 layout.h \
 laywin.h \
 list.h \
 listbox.h \
 listctrl.h \
 log.h \
 longlong.h \
 matrix.h \
 mdi.h \
 memory.h \
 menu.h \
 menuitem.h \
 metafile.h \
 mimetype.h \
 minifram.h \
 module.h \
 msgdlg.h \
 mstream.h \
 notebook.h \
 object.h \
 objstrm.h \
 odbc.h \
 ownerdrw.h \
 palette.h \
 panel.h \
 paper.h \
 pen.h \
 pnghand.h \
 print.h \
 printdlg.h \
 prntbase.h \
 process.h \
 progdlg.h \
 prop.h \
 propform.h \
 proplist.h \
 radiobox.h \
 radiobut.h \
 region.h \
 resource.h \
 sashwin.h \
 sckaddr.h \
 sckint.h \
 sckipc.h \
 sckstrm.h \
 scrolbar.h \
 scrolwin.h \
 serbase.h \
 settings.h \
 setup.h \
 slider.h \
 socket.h \
 spinbutt.h \
 splitter.h \
 statbmp.h \
 statbox.h \
 statline.h \
 stattext.h \
 statusbr.h \
 stream.h \
 string.h \
 tab.h \
 tabctrl.h \
 taskbar.h \
 tbar95.h \
 tbarbase.h \
 tbarmsw.h \
 tbarsmpl.h \
 textctrl.h \
 textdlg.h \
 textfile.h \
 thread.h \
 time.h \
 timer.h \
 tokenzr.h \
 toolbar.h \
 tooltip.h \
 treectrl.h \
 types.h \
 url.h \
 utils.h \
 valgen.h \
 validate.h \
 valtext.h \
 variant.h \
 version.h \
 wave.h \
 wfstream.h \
 window.h \
 wx.h \
 wx_cw.h \
 wx_cw_cm.h \
 wx_cw_d.h \
 wxchar.h \
 wxexpr.h \
 wxprec.h \
 xpmhand.h \
 zstream.h

# setup.h is installed in another directory because several versions of wxwin
# should be able to coexist on the same machine
portheadersdir = ${datadir}/@PACKAGE@/include/wx/@TOOLKIT_DIR@
portheaders_headers = setup.h

